# markow_chains

./: .gitignore  CMakeLists.txt  README.md
lib/: markow_chains.cpp  markow_chains.h
